--- a/stylesheets/css/tuktuk.layout.css
+++ b/stylesheets/css/tuktuk.layout.css
@@ -97,6 +97,7 @@ body * {
   box-sizing: border-box;
 }
 body > header {
+  height: 48px;
   line-height: 48px;
   position: relative;
 }
@@ -104,22 +105,15 @@ body > header .logo {
   font-size: 2em;
   line-height: 48px;
 }
-body > header button,
-body > header .button {
-  position: relative;
-  top: -5px;
-}
 body > header nav {
-  font-size: 0.9em;
+  font-size: 0.95em;
 }
 body > header nav a {
-  padding: 0 12px;
+  margin: 0 10px;
+  display: inline-block;
 }
-body > header nav a:not(.button):last-child {
-  padding-right: 0px;
-}
-body > header nav a > .icon {
-  font-size: 1.1em;
+body > header nav a:last-child {
+  margin-right: 0px;
 }
 body > footer {
   padding: 16px 0;
