--- a/stylesheets/tuktuk.layout.styl
+++ b/stylesheets/tuktuk.layout.styl
@@ -34,26 +34,22 @@ body
     box-sizing: border-box
 
   & > header
-    // height: size = 48px
-    line-height: 48px
+    height: h = 48px
+    line-height: h
     position: relative
 
     & .logo
       font-size: 2.0em
-      line-height: 48px
+      line-height: h
 
-    & button, .button
-      position: relative
-      top: -5px
+
 
     & nav
-      font-size: 0.9em
+      font-size: 0.95em
       & a
-        padding: 0 12px
-        &:not(.button):last-child
-          padding-right: 0px
-        & > .icon
-          font-size: 1.1em
+        margin: 0 10px
+        &:last-child
+          margin-right: 0px
 
   & > footer
     padding: 16px 0
