Stylesheets for margin/padding

--- a/stylesheets/tuktuk.widget.styl
+++ b/stylesheets/tuktuk.widget.styl
@@ -9,33 +9,32 @@
     float: right
 
 dimension = 20px
-.no-margin
+
+.margin_none
   margin: 0
 .margin
-  &.all
-    margin: dimension
-  &.left
-    margin-left: dimension
-  &.right
-    margin-right: dimension
-  &.top
-    margin-top: dimension
-  &.bottom
-    margin-bottom: dimension
+  margin: dimension
+.margin_left
+  margin-left: dimension
+.margin_right
+  margin-right: dimension
+.margin_top
+  margin-top: dimension
+.margin_bottom
+  margin-bottom: dimension
 
-.no-padding
+.padding_none
   padding: 0
 .padding
-  &.all
-    padding: dimension
-  &.left
-    padding-left: dimension
-  &.right
-    padding-right: dimension
-  &.top
-    padding-top: dimension
-  &.bottom
-    padding-bottom: dimension
+  padding: dimension
+.padding_left
+  padding-left: dimension
+.padding_right
+  padding-right: dimension
+.padding_top
+  padding-top: dimension
+.padding_bottom
+  padding-bottom: dimension
 
 .display
   &.block
