--- a/stylesheets/css/tuktuk.widget.css
+++ b/stylesheets/css/tuktuk.widget.css
@@ -7,40 +7,40 @@
 .float.right {
   float: right;
 }
-.no-margin {
+.margin_none {
   margin: 0;
 }
-.margin.all {
+.margin {
   margin: 20px;
 }
-.margin.left {
+.margin_left {
   margin-left: 20px;
 }
-.margin.right {
+.margin_right {
   margin-right: 20px;
 }
-.margin.top {
+.margin_top {
   margin-top: 20px;
 }
-.margin.bottom {
+.margin_bottom {
   margin-bottom: 20px;
 }
-.no-padding {
+.padding_none {
   padding: 0;
 }
-.padding.all {
+.padding {
   padding: 20px;
 }
-.padding.left {
+.padding_left {
   padding-left: 20px;
 }
-.padding.right {
+.padding_right {
   padding-right: 20px;
 }
-.padding.top {
+.padding_top {
   padding-top: 20px;
 }
-.padding.bottom {
+.padding_bottom {
   padding-bottom: 20px;
 }
 .display.block {
