--- a/examples/item.styl
+++ b/examples/item.styl
@@ -4,6 +4,13 @@
     height: 28px
   &.medium
     height: 48px
+  &.big
+    height: 80px
+
+  header &
+    margin-bottom: -8px
+    margin-right: 3px
+    height: 24px
 
 .item
   height: h = 420px
@@ -11,6 +18,7 @@
 
 
 .message
+  margin-bottom: 18px
   & .info
-    margin-top: 10px
+    margin-top: 8px
     opacity: 0.5
