--- a/stylesheets/tuktuk.theme.styl
+++ b/stylesheets/tuktuk.theme.styl
@@ -115,9 +115,9 @@ body
       background-color: color_secondary
       color: #666
       text-shadow: 0 1px 0 rgba(255,255,255,0.25)
-    &.success
+    &.accept
       background-color: color_success
-    &.alert
+    &.cancel
       background-color: color_alert
     &.transparent
       background: none !important
