--- a/stylesheets/css/tuktuk.widget.css
+++ b/stylesheets/css/tuktuk.widget.css
@@ -51,8 +51,7 @@
 }
 /* ================== DASHBOARD ================== */
 section.underline {
-  border-bottom: solid #bbb 1px;
-  padding: 12px 0;
+  padding: 0;
 }
 /* ================== IMAGE & MEDIA ================== */
 img {
