--- a/stylesheets/tuktuk.widget.styl
+++ b/stylesheets/tuktuk.widget.styl
@@ -45,8 +45,7 @@ dimension = 20px
 /* ================== DASHBOARD ================== */
 section
   &.underline
-    border-bottom: solid #bbb 1px
-    padding: 12px 0
+    padding: 0
 
 /* ================== IMAGE & MEDIA ================== */
 img
