--- a/stylesheets/css/tuktuk.nav.css
+++ b/stylesheets/css/tuktuk.nav.css
@@ -1,30 +1,20 @@
-nav,
-nav a:not(.button) {
+nav > .button,
+nav button {
   font-size: 14px !important;
 }
 nav.group a {
-  font-size: 15px;
-  padding: 0 16px;
-}
-nav.group a:last-child {
-  border-right: none;
-  padding-right: 0px;
+  padding: 12px 16px;
+  margin: 0px;
+  display: inline-block;
 }
 nav:not(.group) a {
   margin: 0 2px;
 }
-nav:not(.group) a:not(.button) .icon {
-  margin-right: 4px;
-  position: relative;
-  font-size: 1.15em;
-  top: 1px;
-}
 nav:not(.group) a:last-child {
   margin-right: 0px;
 }
-.navigation.fixed {
-  position: fixed;
-  top: 0px;
-  width: 100%;
-  display: block;
+nav a:not(.button) .icon {
+  margin-right: 4px;
+  position: relative;
+  top: 1px;
 }
