--- a/stylesheets/tuktuk.nav.styl
+++ b/stylesheets/tuktuk.nav.styl
@@ -1,31 +1,20 @@
 nav
-  &, & a:not(.button)
+  & > .button, button
     font-size: 14px !important
 
   &.group
     & a
-      font-size: 15px
-      padding: 0 16px
-      &:last-child
-        border-right: none
-        padding-right: 0px
+      padding: 12px 16px
+      margin: 0px
+      display: inline-block
 
   &:not(.group)
     & a
       margin: 0 2px
-
-      &:not(.button) .icon
-        margin-right: 4px
-        position: relative
-        font-size: 1.15em
-        top: 1px
-
       &:last-child
         margin-right: 0px
 
-.navigation
-  &.fixed
-    position: fixed
-    top: 0px
-    width: 100%
-    display: block
+  & a:not(.button) .icon
+    margin-right: 4px
+    position: relative
+    top: 1px
