--- a/stylesheets/css/tuktuk.nav.css
+++ b/stylesheets/css/tuktuk.nav.css
@@ -1,14 +1,14 @@
-nav > .button,
-nav button {
-  font-size: 14px !important;
+nav {
+  font-size: 15px !important;
 }
 nav.group a {
+  font-size: 15px;
   padding: 12px 16px;
   margin: 0px;
   display: inline-block;
 }
 nav:not(.group) a {
-  margin: 0 2px;
+  margin: 0 4px;
 }
 nav:not(.group) a:last-child {
   margin-right: 0px;
