--- a/stylesheets/css/tuktuk.font.css
+++ b/stylesheets/css/tuktuk.font.css
@@ -82,6 +82,15 @@ h6 {
 .text.justify {
   text-align: justify;
 }
+.text.small {
+  font-size: 0.8em;
+}
+.text.normal {
+  font-size: 1em;
+}
+.text.big {
+  font-size: 1.2em;
+}
 /* ========================= BASIC ELEMENTS ========================= */
 p {
   font-size: 1.1em;
