--- a/stylesheets/tuktuk.layout.styl
+++ b/stylesheets/tuktuk.layout.styl
@@ -58,6 +58,10 @@ body
     padding: 48px 0
     background: none
 
+
+    &.underline
+      padding: 0
+
     &.landing
       padding: 64px 0
       & h1
