--- a/stylesheets/tuktuk.nav.styl
+++ b/stylesheets/tuktuk.nav.styl
@@ -14,7 +14,7 @@ nav
       &:last-child
         margin-right: 0px
 
-  & a:not(.button) .icon
-    margin-right: 4px
+  & a:not(.button) .icon, a:not(.button) img
+    margin-right: 2px
     position: relative
     top: 1px
