--- a/stylesheets/tuktuk.font.styl
+++ b/stylesheets/tuktuk.font.styl
@@ -49,8 +49,12 @@ h6
     text-align: center
   &.justify
     text-align: justify
-
-
+  &.small
+    font-size: 0.8em
+  &.normal
+    font-size: 1.0em
+  &.big
+    font-size: 1.2em
 /* ========================= BASIC ELEMENTS ========================= */
 p
   font-size: s = 1.1em
