--- a/stylesheets/css/tuktuk.list.css
+++ b/stylesheets/css/tuktuk.list.css
@@ -1,18 +1,10 @@
-ul,
-ol {
-  margin-bottom: 20px;
-  list-style: none;
-}
-ul ul li,
-ol ul li,
-ul ol li,
-ol ol li {
-  margin: 0 0 6px 0;
+ul {
+  list-style: disc;
 }
 ul li {
-  margin: 0 0 5px 0;
-  padding: 0 0 0 18px;
-  line-height: 18px;
+  margin: 0 0 5px 18px;
+  padding: 0;
+  background: none;
 }
 ul ul,
 ul ol {
@@ -29,18 +21,6 @@ ul.square ul {
 ul.circle,
 ul.circle ul {
   list-style: circle outside;
-}
-ul.disc,
-ul.disc ul {
-  list-style: disc outside;
-}
-ul.square li,
-ul.circle li,
-ul.disc li {
-  margin: 0 0 5px 15px;
-  padding: 0;
-  line-height: 18px;
-  background: none;
 }
 ol {
   margin: 0 0 20px 20px;
