--- a/stylesheets/css/tuktuk.theme.css
+++ b/stylesheets/css/tuktuk.theme.css
@@ -25,6 +25,7 @@ body > header nav a:active {
   color: #fff;
 }
 body > section.underline {
+  border-top: solid #bbb 1px;
   border-bottom: solid #bbb 1px;
 }
 body nav.group a {
