--- a/stylesheets/tuktuk.theme.styl
+++ b/stylesheets/tuktuk.theme.styl
@@ -25,7 +25,9 @@ body
 
   & > section
     &.underline
+      border-top: solid #bbb 1px
       border-bottom: solid #bbb 1px
+
 
   /* ====================== NAVIGATION ====================== */
   & nav
