--- a/examples/dashboard.styl
+++ b/examples/dashboard.styl
@@ -15,8 +15,37 @@
       height: 16px
       margin-right: 2px
 
-.avatars
-  & > img
-    width: 31px
-    height: 31px
-    margin: 0px 1px 1px 0px
+.last
+  & h5
+    margin-bottom: 8px
+
+  & .avatar
+    width: size = 41px
+    height: size
+    &.border
+      border: 1px solid none
+      &:hover
+        border: 1px solid red
+
+
+.list_avatar
+  & > li
+    height: 41px
+    margin-bottom: 4px
+    line-heigth: 32px
+    & > img
+      margin-right: 8px
+
+.promotioned
+  font-size: 1.2em
+  .preview
+    width: 100%
+    height: 340px
+
+  & .author
+    line-height: 32px
+    margin: 6px 0 12px 0
+    & .avatar
+      width: 32px
+      border: 2px solid #fff
+      margin-right: 6px
