--- a/examples/dashboard.styl
+++ b/examples/dashboard.styl
@@ -49,3 +49,12 @@
       width: 32px
       border: 2px solid #fff
       margin-right: 6px
+
+.form.search
+  & input
+    border: none !important
+    box-shadow: none !important
+    font-size: 1.8em
+    height: auto
+    padding: 12px 0 !important
+    margin: 0 !important
