--- a/package/tuktuk.theme.styl
+++ b/package/tuktuk.theme.styl
@@ -23,16 +23,24 @@ body
       &:hover, &:active
         color: #fff
 
+  & > section
+    &.underline
+      border-bottom: solid #bbb 1px
+
+
   /* ====================== NAVIGATION ====================== */
   & nav
     &.group a
-      border-right: solid #ccc 1px
+      border-left: solid #ccc 1px
       &, & > .icon
-        color: #666
+        color: #888
       &:hover, &:active, &.active
         color: #000
+        background: white
         & > .icon
           color: #000
+      &:last-child
+        border-right: solid #ccc 1px
 
   /* ====================== BACKGROUNDS ====================== */
   & .bck
@@ -115,9 +123,9 @@ body
       background-color: color_secondary
       color: #666
       text-shadow: 0 1px 0 rgba(255,255,255,0.25)
-    &.success
+    &.accept
       background-color: color_success
-    &.alert
+    &.cancel
       background-color: color_alert
     &.transparent
       background: none !important
