--- a/package/widgets/tuktuk.widget.modal.css
+++ b/package/widgets/tuktuk.widget.modal.css
@@ -1,5 +1,5 @@
 [data-tuktuk="modal"] {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 50%;
   width: 400px;
@@ -48,11 +48,19 @@
 [data-tuktuk="modal"] > hr {
   border: solid 1px #ccc;
 }
+@media only screen and (max-width: 540px) {
+  [data-tuktuk="modal"] {
+    left: 5% !important;
+    width: 90% !important;
+    margin-left: 0px !important;
+  }
+}
 [data-tuktuk="lock"] {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
+  bottom: 0;
   left: 0;
   background: rgba(0,0,0,0.75);
   z-index: 1980;
