--- a/stylesheets/tuktuk.theme.styl
+++ b/stylesheets/tuktuk.theme.styl
@@ -4,14 +4,14 @@
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700")
 color = #16A6B6
 color_secondary = #BFBFBF
-color_alert = #EE6557
-color_success = #3FB58E
+color_cancel = #EE6557
+color_accept = #3FB58E
 
 
 body
   color: #000
   font-size: 1em
-  line-height: 1.123
+  line-height: 1.2
   font-family: "Source Sans Pro"
   font-weight: 300
 
@@ -54,10 +54,10 @@ body
       background-color: #181818
     &.theme
       background-color: color
-    &.success
-      background-color: color_success
-    &.alert
-      background-color: color_alert
+    &.accept
+      background-color: color_accept
+    &.cancel
+      background-color: color_cancel
 
   /* ====================== TEXT ====================== */
   & .text
@@ -70,10 +70,10 @@ body
         color: color
       &.secondary
         color: color_secondary
-      &.success
-        color: color_success
-      &.alert
-        color: color_alert
+      &.accept
+        color: color_accept
+      &.cancel
+        color: color_cancel
 
 
   /* ====================== FORM ====================== */
@@ -84,8 +84,8 @@ body
       border: 1px solid #ddd
       box-shadow inset 0 1px 2px rgba(0, 0, 0, 0.1)
       &.error, &:required
-        border-color: color_alert
-        color: color_alert
+        border-color: color_cancel
+        color: color_cancel
         background-color: rgba(198, 15, 19, 0.1)
       &:focus
         background: #FAFAFA;
@@ -124,9 +124,9 @@ body
       color: #666
       text-shadow: 0 1px 0 rgba(255,255,255,0.25)
     &.accept
-      background-color: color_success
+      background-color: color_accept
     &.cancel
-      background-color: color_alert
+      background-color: color_cancel
     &.transparent
       background: none !important
 
