--- a/widgets/modal/css/tuktuk.widget.modal.css
+++ b/widgets/modal/css/tuktuk.widget.modal.css
@@ -1,5 +1,5 @@
 [data-tuktuk="modal"] {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 50%;
   width: 400px;
@@ -58,8 +58,9 @@
 [data-tuktuk="lock"] {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
+  bottom: 0;
   left: 0;
   background: rgba(0,0,0,0.75);
   z-index: 1980;
