--- a/widgets/modal/tuktuk.widget.modal.styl
+++ b/widgets/modal/tuktuk.widget.modal.styl
@@ -3,7 +3,7 @@
 
 padding = 12px
 [data-tuktuk="modal"]
-  position: absolute
+  position: fixed
   top: 0
   left: 50%
   width: w = 400px
@@ -42,8 +42,9 @@ padding = 12px
 [data-tuktuk="lock"]
   width: 100%
   height: 100%
-  position: absolute
+  position: fixed
   top: 0
+  bottom: 0
   left: 0
   background: rgba(0,0,0,0.75)
   z-index: 1980
