--- a/stylesheets/tuktuk.widget.styl
+++ b/stylesheets/tuktuk.widget.styl
@@ -39,8 +39,9 @@ dimension = 20px
 .display
   &.block
     display: block
-  &.hidden
+  &.none
     display: none
+
 
 /* ================== IMAGE & MEDIA ================== */
 img
