--- a/widgets/modal/tuktuk.widget.modal.styl
+++ b/widgets/modal/tuktuk.widget.modal.styl
@@ -6,34 +6,56 @@ padding = 12px
   position: fixed
   top: 0
   left: 50%
-  width: w = 400px
-  margin-left: -(w / 2)
   padding: padding
-
   background: #f5f5f5
   border-radius 0 0 1px 1px
   box-shadow 0 1px 4px #000
-
   transition all 300ms 100ms
   transform translateY(-100%)
   opacity: 0
+  visibility: hidden
   z-index: 1981
+
   &.active
     transform translateY(0%)
     opacity: 1
+    visibility: visible
 
-  &.small
-    width: w = 320px
+  &.[class^="column_"]
+    margin-top: 0px !important
+
+  &, &.column_4
+    width: w = 288px
     margin-left: -(w / 2)
-
-  &.big
-    width: w = 540px
+  &.column_5
+    width: w = 368px
+    margin-left: -(w / 2)
+  &.column_6
+    width: w = 448px
+    margin-left: -(w / 2)
+  &.column_7
+    width: w = 528px
+    margin-left: -(w / 2)
+  &.column_8
+    width: w = 608px
+    margin-left: -(w / 2)
+  &.column_9
+    width: w = 688px
+    margin-left: -(w / 2)
+  &.column_10
+    width: w = 768px
+    margin-left: -(w / 2)
+  &.column_11
+    width: w = 848px
+    margin-left: -(w / 2)
+  &.column_12
+    width: w = 928px
     margin-left: -(w / 2)
 
   & > hr
     border: solid 1px #ccc
 
-@media only screen and (max-width: 540px)
+@media only screen and (max-width: 528px)
   [data-tuktuk="modal"]
     left: 5% !important
     width: w = 90% !important
