--- a/stylesheets/tuktuk.layout.styl
+++ b/stylesheets/tuktuk.layout.styl
@@ -18,10 +18,8 @@ audio, video
   margin: 0
   padding: 0
   border: 0
-  font-size: 100%
-  font: inherit
+  font-weight: inherit
   vertical-align: baseline
-
 
 body
   margin: 0
