--- a/stylesheets/tuktuk.layout.styl
+++ b/stylesheets/tuktuk.layout.styl
@@ -51,12 +51,8 @@ body
     padding: 16px 0
 
   & > section
-    padding: 48px 0
-    background: none
-
-    &.underline
-      padding: 0
-
+    &.padding
+      padding: 48px 0
     &.landing
       padding: 64px 0
       & h1
